# ai-research-tool

./: .env.example  .gitignore  APPLIED_AI_RESEARCH_FRONTIER.md  pyproject.toml  run.sh
backend/: config.py  database.py  main.py
backend/api/: analytics.py  collectors.py  companies.py  instances.py  people.py  router.py  search.py  tags.py
backend/collectors/: arxiv.py  base.py  rss_blogs.py  semantic_scholar.py  taxonomy.py
backend/models/: __init__.py  company.py  person.py  research_instance.py  tag.py
backend/schemas/: analytics.py  research_instance.py  search.py
backend/seed/: run_seed.py  seed_data.py
backend/services/: analytics.py  search.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
frontend/src/lib/: utils.ts
frontend/src/pages/: Analytics.tsx  Browse.tsx  Companies.tsx  Dashboard.tsx  InstancePage.tsx  People.tsx  SearchPage.tsx  SettingsPage.tsx
